--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,5 +1,16 @@
+// Libraries
 @import 'normalize.css/normalize'
 @import 'slick-carousel/slick/slick.scss'
 @import 'slick-carousel/slick/slick-theme.scss'
+@import '@fortawesome/fontawesome-free/scss/fontawesome.scss'
 
-@import 'second.sass'
+
+@import './var'
+
+@import './base'
+
+
+
+// Section
+
+
