--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,11 +6,19 @@
 
 
 @import './var'
-
 @import './base'
-
+@import './grid'
 
 
 // Section
+@import './section/header'
+@import './section/offer'
+@import './section/feature'
+@import './section/services'
+@import './section/expert'
+@import './section/marketing'
+@import './section/footer'
+
+
 
 
