added adaptive for all screens

--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -1,8 +1,12 @@
 html 
     font-family: $font_main, sans-serif
     font-size: $fs_main // 16px
-    line-height: rem_size(26px)
+    line-height: 26px
     color: $color_main
+
+img
+    max-width: 100%
+    height: auto
 
 ul, li 
     margin: 0
@@ -29,23 +33,19 @@ button
 .main-title, .section-title
     color: $color_title
     font-weight: 700
-
-.main-title
-    font-size: rem_size(44px)
-    line-height: rem_size(54px)
     
 
 .section-title
-    font-size: rem_size(36px)
-    line-height: rem_size(54px)
+    font-size:  36px
+    line-height:  54px
 
 .btn
     background: $color_orange
     color: $color_btn
     border: 1px solid transparent
     border-radius: 4px
-    font-size: rem_size(16px)
-    line-height: rem_size(24px)
+    font-size: 16px
+    line-height: 24px
     font-weight: 600
     padding: 15px 40px
     transition: background .25s
@@ -71,17 +71,16 @@ button
         margin-right: 25px
     
     &__link
-        font-size: rem_size(14px)
-        line-height: rem_size(28px)
-        border-bottom: 2px solid transparent
+        font-size: 14px
+        line-height: 28px
 
         &:hover
-            border-bottom: 2px solid #BCD0E5
+            color: $color_orange
 
 .video-link
     color: $color_orange
     font-weight: 600
-    line-height: rem_size(24px)
+    line-height:  24px
     text-decoration: underline
     padding-left: 26px
     position: relative
