--- a/src/sass/section/expert.sass
+++ b/src/sass/section/expert.sass
@@ -15,7 +15,7 @@
         flex-direction: row-reverse
         position: absolute
 
-        &--left
+        &:first-child
             flex-direction: row
             
             .expert__item-message
