--- a/src/sass/section/feature.sass
+++ b/src/sass/section/feature.sass
@@ -11,12 +11,14 @@
     
     &__items
         display: flex
+        flex-wrap: wrap
         justify-content: space-between
         margin-bottom: 34px
 
     &__item
         text-align: left
         max-width: 240px
+        margin: 15px 0
 
         &-icon
             width: 50px
