--- a/src/sass/section/footer.sass
+++ b/src/sass/section/footer.sass
@@ -8,6 +8,7 @@
     &__nav
         margin-top: 30px
         display: flex
+        flex-wrap: wrap
         align-items: flex-end
         justify-content: flex-end
 
