--- a/src/sass/section/offer.sass
+++ b/src/sass/section/offer.sass
@@ -11,7 +11,12 @@
     
     &__descr
         margin: 30px 0 60px 0
+        font-size: 18px
 
     &__text
         max-width: 458px
-        font-size: rem_size(18px)
+
+    &__title
+        font-size: 44px
+        line-height: 54px
+        color: $color_title
