--- a/src/sass/section/services.sass
+++ b/src/sass/section/services.sass
@@ -2,6 +2,7 @@
     &__row
         display: flex
         justify-content: space-between
+        align-items: center
         margin-bottom: 100px
 
         &-title
@@ -15,6 +16,10 @@
         &--reverse
             flex-direction: row-reverse
 
+            .services__text
+                margin-right: 0
+                margin-left: 30px
+
         &:last-child
             margin-bottom: 0
 
@@ -23,8 +28,8 @@
         line-height: rem_size(24px)
     
     &__text
-        margin-top: 30px
         max-width: 465px
+        margin-right: 30px
     
     &__item
         margin-bottom: 22px
